--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>for all that we see or seem is but a dream within a dream</title>
+    <title>no honey no money</title>
   </head>
   <body>
     <p>hanianiani is lazy and doesn't like html</p>
