--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>no honey no money</title>
+    <title>no money no honey</title>
   </head>
   <body>
     <p>hanianiani is lazy and doesn't like html</p>
