--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>no money no honey</title>
-  </head>
+ </head>
   <body>
     <p>hanianiani is lazy and doesn't like html</p>
-  </body>
+    <p>but she likes music</p>
+    <p>so here are the best songs in the world:</p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/iYQVG0iiCkM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+    <p>Tim Buckley is the shit. You know what makes an epic singer? Epic ears, everybody has a good voice. But the inner hearing controls it. And of course some training. But Timmy had shitloads of raw talent. He always improvised in his live performances and never sang a wrong note. This song, I've heard, is about heroin. But, well, who cares? It gets you high just by itself. </p>
+    <p>If you want to hear an event better Timmy song, check out <a title="" href="https://youtu.be/Z47ZRpRqSzE">The Healing Festival</a>.</p>
+
+</body>
 </html>
