--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <p>so here are the best songs in the world:</p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/iYQVG0iiCkM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-    <p>Tim Buckley is the shit. You know what makes an epic singer? Epic ears. Everybody has a good voice. <br></br>
-But the inner hearing controls it. And, of course, some training. But Timmy had shitloads of raw talent. <br></br>
-He always improvised in his live performances and never sang a wrong note. This song, I've heard, is about heroin. <br></br>
-But, well, who cares? It gets you high just by itself. </p>
+    <p>Tim Buckley is the shit. You know what makes an epic singer? Epic ears. Everybody has a good voice.
+     But the inner hearing controls it. And, of course, some training. Hm, no, actually, lots of training. 
+     Even with the shitloads of raw talent that Timmy had he worked on improving his skills a lot. 
+     At least that's what says his main guitar man Lee Underwood in Blue Melody.
+     Anyways, he always improvised in his live performances and never sang a wrong note. 
+     This song, I've heard, is about heroin.
+     But, well, who cares? It gets you high just by itself. </p>
     <p>If you want to hear an even better Timmy song, check out <a title="" href="https://youtu.be/Z47ZRpRqSzE">The Healing Festival</a>.</p>
 
 </body>
