--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
      Even with the shitloads of raw talent that Timmy had he worked on improving his skills a lot. 
      At least that's what says his main guitar man Lee Underwood in Blue Melody.
      Anyways, he always improvised in his live performances and never sang a wrong note. 
-     This song, I've heard, is about heroin.
+     People say this song is about heroin but I don't know what it's about. I've listened to it at least a thousand times (not exaggerating) within the last 10+ years and I just imagined a pleasant street where different emotions and images take over your senses and imagination as you walk it down. Pretty accurate description of the path I'm walking down my life. :D
      But, well, who cares? It gets you high just by itself. </p>
     <p>If you want to hear an even better Timmy song, check out <a title="" href="https://youtu.be/Z47ZRpRqSzE">The Healing Festival</a>.</p>
 
